[gd_scene load_steps=19 format=3 uid="uid://kthmx5shbvi4"]

[ext_resource type="Script" uid="uid://bog0nbws2xhwr" path="res://scripts/player.gd" id="1_4dohe"]
[ext_resource type="Texture2D" uid="uid://bi4dc8sm6jwnq" path="res://assets/Sprite-0010.png" id="1_72ieh"]
[ext_resource type="Texture2D" uid="uid://birdrl0dllug5" path="res://assets/Sprite-0008.png" id="2_4dohe"]
[ext_resource type="Texture2D" uid="uid://chr6isjsnk7dc" path="res://assets/Sprite-0011.png" id="3_1txc5"]
[ext_resource type="AudioStream" uid="uid://4mdhb4j613yi" path="res://assets/death_9_sean.wav" id="5_ht1c8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u51tk"]
atlas = ExtResource("2_4dohe")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbsxf"]
atlas = ExtResource("2_4dohe")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opo22"]
atlas = ExtResource("2_4dohe")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgeog"]
atlas = ExtResource("3_1txc5")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rb0w"]
atlas = ExtResource("3_1txc5")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dohe"]
atlas = ExtResource("1_72ieh")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r66lb"]
atlas = ExtResource("1_72ieh")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1txc5"]
atlas = ExtResource("1_72ieh")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht1c8"]
atlas = ExtResource("1_72ieh")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2jcq"]
atlas = ExtResource("1_72ieh")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1txc5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u51tk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbsxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opo22")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgeog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rb0w")
}],
"loop": false,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dohe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r66lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1txc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht1c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2jcq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ht1c8"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r66lb"]

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_4dohe")

[node name="animated_sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_1txc5")
animation = &"idle"
autoplay = "idle"

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ht1c8")

[node name="raycast" type="RayCast2D" parent="."]
texture_filter = 1
target_position = Vector2(0, 15)

[node name="timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="punch" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="punch"]
shape = SubResource("RectangleShape2D_r66lb")
disabled = true

[node name="audio_stream_sfx" type="AudioStreamPlayer" parent="."]

[node name="audio_stream_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ht1c8")

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="punch" to="." method="_on_punch_body_entered"]
